[package]
name = "barfs"
version = "0.1.2"
authors = ["serprex"]
edition = "2018"
license = "MIT"
description = "Befunge JIT"
repository = "https://github.com/serprex/Befunge/barfs"

[dependencies]
cranelift = "0.94"
cranelift-codegen = "0.94"
cranelift-jit = "0.94"
cranelift-module = "0.94"
cranelift-native = "0.94"
fxhash = "0.2"
rand = "0.8"

[profile.release]
panic = "abort"
lto = "thin"

